Changed the wrong source

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Learning JavaScript</title>
-	<link rel="stylesheet" type="text/css" href="learnJavaScriptStyle.css">
+	<link rel="stylesheet" type="text/css" href="styleOnMonika.css">
 </head>
 <body>
 
