--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<html lang = "en">
 <head>
 	<title>Learning JavaScript</title>
 	<link rel="stylesheet" type="text/css" href="styleOnMonika.css">
@@ -14,15 +15,112 @@
 
 <button id = "textAppender"> Just click :)
 </button>
+	<title>Learning jQuery</title>
+	<script type="text/javascript" src = "http://code.jquery.com/jquery-latest.min.js"></script>
 
-<div id ="secondDiv"> Monika is </div>
+	<style type="text/css">
+		#yuri{
+			width: 563px;
+			height: 500px;
+		}
+		.goright{
+			margin: 30px;
+			clear:both;
+			float: right;
+		}
+		.square{
+			height: 300px;
+			width: 300px;
+			background-color: #C82DB1;
+		}
+		.circle{
+			height: 300px;
+			width: 300px;	
+			border-radius: 150px;
+			background-color: #8214DF;
+		}
+		#container{
+			background-color: grey;
+			height: 1200px;
+		}
+		p{
+			font-family: Verdana;
+			font-size: 4em;
+		}
+		.buTTon{
+			margin-bottom: 35px;
+		}
+		#header{
+			height: 500px;
+		}
+	</style>
 
 <button id = "textCreator"> </button>
+</head>
 
-<div id = "emptyDiv">
-	
+<body>
+<!--
+fadeOut,
+fadeIn, and
+animations
+-->
+<div id = "header">
+	<!-- Animations
+	-->
+	<div class = "goright circle" id = "circle2"></div>
+	<!-- Fades
+	-->
+	<p id = "hi">Hi</p>
+	<button id = "buTT" class = "buTTon">Fade Out</button>
+	<button id = "buTTer" class = "buTTon">Fade In</button>
 </div>
+<div id = "container">
+	<!-- 
+		Changing the style of a shape by clicking on the said shape
+	-->
+	<div class = "square goright"></div>
+	<div class = "square goright"></div>
+	<div class = "goright circle" id = "circle1">	</div>
+	<!--
+		Changing the iFrame by hovering on an image
+	-->
+	<img src="C:\Users\steve\Pictures\Images from the Internet that shall remain undisclosed\Monika stuff lol\Monika giving love.png" id= "monikaa"/><br/>
+	<iframe src="https://doki-doki-literature-club.fandom.com/wiki/Yuri" id =  "yuri"></iframe>
+</div>
+<!--
+	Script
+-->
+	<script type="text/javascript">
+		// Function for iFrame change //
+		$("#monikaa").hover(function(){
+			$("#yuri").attr("src","https://doki-doki-literature-club.fandom.com/wiki/Monika");
 
+		});
+		// Function for style-changing //
+		$("#circle1").click(function(){
+			$(".square").fadeOut();
+		});
+		// Function for fading out //
+		$("#buTT").click(function(){
+			$("#hi").fadeOut(1000,function(){
+				alert("Sup")
+			});
+		});
+		// Function for fading in //
+		$("#buTTer").click(function(){
+			$("#hi").html("Bye");
+			$("#hi").fadeIn();
+		});
+		// Function for animations //
+		$("#circle2").click(function(){
+			$(this).animate({
+				width: "400px",
+				height : "400px",
+				borderRadius: "200px",
+				backgroundColor : "#FFFBFF !important",
+				marginRight : "50px"
+			}, 10000);
+		});
 
 
 
