Optimizing the codes?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang = "en">
 <head>
 	<title>Learning jQuery</title>
-	<script type="text/javascript" src = "http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src = "jquery-latest.min.js"></script>
 
 	<style type="text/css">
 		#yuri{
@@ -72,7 +72,7 @@ animations
 	<!--
 		Changing the iFrame by hovering on an image
 	-->
-	<img src="C:\Users\steve\Pictures\Images from the Internet that shall remain undisclosed\Monika stuff lol\Monika giving love.png" id= "monikaa"/><br/>
+	<img src="Monika cute version (she's already cute even as a person).jpg" id= "monikaa"/><br/>
 	<iframe src="https://doki-doki-literature-club.fandom.com/wiki/Yuri" id =  "yuri"></iframe>
 </div>
 <!--
