--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<script type="text/javascript" src = "jquery-latest.min.js"></script>
 
 	<style type="text/css">
+		img{
+			width: 300px;
+			height:300px;
+		}
 		#yuri{
 			width: 563px;
 			height: 500px;
