--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
 	<h1>Asyncronous Javascript and XML</h1>
+	<h2>bababa</h2>
+	
+	<script>
+		$.get("test.html");
+	</script>
 
 </body>
 </html>
