--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<script>
 		$.ajax({
-			url: "learn%20jQuery.html";
+			url: "learn%20jQuery.html"
 		}).done(function(data){
 			alert(data)
 		})
